Created controller / service dirs and added schedule endpoint
